kube/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: api
    spec:
      containers:
        - name: api-deployment
          image: thomasmauran/polypedia_api
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: "/files"
              name: mypd
      volumes:
        - name: mypd
          persistentVolumeClaim:
            claimName: api-pv-claim

      restartPolicy: Always

status: {}
