kube/postgres-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: postgres
    spec: 
      containers:
        - name: polypedia-postgres
          image: thomasmauran/polypedia_database
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv-claim

      volumes:
        - name: postgres-pv-claim
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      restartPolicy: Always

status: {}
