kube/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: api
  name: api-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    service: api
