kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend-service
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    service: frontend
